--- a/src/app/admin/login/login.scss
+++ b/src/app/admin/login/login.scss
@@ -10,6 +10,7 @@
         width: 36.458vw;
         padding: 3.4375vw 2.5vw;
         border: 1px solid #D2D2D2;
+        border-radius: 0.4vw;
 
         h3 {
             font-size: 1.667vw;
