--- a/src/app/admin/videoupload/videoUpload.scss
+++ b/src/app/admin/videoupload/videoUpload.scss
@@ -34,4 +34,19 @@
             }
         }
     }
+
+    
+    button {
+        width: 10.4vw;
+        font-family: Inter;
+        font-size: 1.04vw;
+        font-weight: 700;
+        line-height: 1.26vw;
+        text-align: center;
+        color: #FFFFFF;
+        background: #E70BBB;
+        padding: 1.04vw;
+        border-radius: 0.4167vw;
+        margin-bottom: 1.77vw;
+    }
 }
