--- a/src/component/sendCertificateForm/sendCertificateForm.scss
+++ b/src/component/sendCertificateForm/sendCertificateForm.scss
@@ -4,7 +4,8 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    
+    width: 31.25vw;
+
     h2 {
       font-size: 1.5rem;
       font-weight: bold;
@@ -44,6 +45,7 @@
         border-radius: 5px;
         cursor: pointer;
         transition: background 0.3s ease;
+        width: 10.4vw;
         
         &:hover {
           background-color: #c609a3;
