--- a/src/component/categoryTable/categoryTable.scss
+++ b/src/component/categoryTable/categoryTable.scss
@@ -4,6 +4,8 @@
     border: 1px solid #D2D2D2;
     border-radius: 0.5vw;
     overflow: hidden;
+    background: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 
     .titleRow {
         display: flex;
@@ -76,6 +78,80 @@
 
         &:hover {
             color: #C5099B;
+        }
+    }
+}
+
+/* Düzenleme Modalı */
+.editModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .modalContent {
+        background: white;
+        padding: 1.5vw;
+        border-radius: 0.5vw;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+        width: 20vw;
+        text-align: center;
+
+        h3 {
+            margin-bottom: 1vw;
+            font-size: 1.2vw;
+        }
+
+        label {
+            display: block;
+            margin: 0.5vw 0;
+            text-align: left;
+            font-size: 0.9vw;
+        }
+
+        input {
+            width: 100%;
+            padding: 0.7vw;
+            margin-bottom: 1vw;
+            border: 1px solid #ddd;
+            border-radius: 0.3vw;
+            font-size: 0.9vw;
+        }
+
+        .modalActions {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 1vw;
+
+            button {
+                padding: 0.6vw 1vw;
+                border: none;
+                cursor: pointer;
+                border-radius: 0.3vw;
+                font-size: 0.9vw;
+            }
+
+            button:first-child {
+                background: #007BFF;
+                color: white;
+
+                &:hover {
+                    background: #0056b3;
+                }
+            }
+
+            button:last-child {
+                background: #ccc;
+
+                &:hover {
+                    background: #aaa;
+                }
+            }
         }
     }
 }
