--- a/src/component/sendCertificateTable/sendCertificateTable.scss
+++ b/src/component/sendCertificateTable/sendCertificateTable.scss
@@ -2,7 +2,7 @@
   padding: 2rem;
 
   .tableContainer {
-    width: 45vw;
+    width: 50vw;
     margin: auto;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -24,12 +24,29 @@
   }
 
   .column {
-    flex: 1;
     text-align: left;
     padding: 0 12px;
   }
 
-  .action {
+  .column.index {
+    flex: 0.5;
+    font-weight: bold;
+  }
+
+  .column.name {
+    flex: 1.5;
+  }
+
+  .column.email {
+    flex: 2.5;
+  }
+
+  .column.course {
+    flex: 2.5;
+  }
+
+  .column.action {
+    flex: 1;
     display: flex;
     justify-content: center;
   }
